# palautusrepositorio

./: README.md
.github/workflows/: pylint.yml
imp/: jotain
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: test_statistics_service.py
viikko1/riippuvuuksien-injektointi/src/: laskin.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/: jokin-muutos-kopio
viikko2/git-branch-harjoitus/: index.py
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/.github/workflows/: pylint.yml
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/tests/: reset_counter.robot
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/: app.py
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: review.md
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py  komennot.py
viikko6/query-language/src/: index.py  matchers.py
